--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   * { margin: 0; padding: 0; box-sizing: border-box; }
 
   :root {
-    --gold: #B58F55; /* muted aged gold */
+    --gold: #C9A96E; /* warm gold matching logo */
     --gold-light: #D7B67E;
-    --bg: #0e0f10; /* dark charcoal */
-    --bg-card: #121315;
-    --bg-hover: #161618;
+    --bg: #0F0D0A; /* warm dark brown */
+    --bg-card: #16130F;
+    --bg-hover: #1C1813;
     --text: #E8E8E8;
     --text-dim: #9a9a9a;
-    --border: rgba(255,255,255,0.04);
+    --border: rgba(201,169,110,0.12);
     --success: #4A7A5A;
     --error: #8A3A3A;
     --glass: rgba(255,255,255,0.02);
@@ -30,7 +30,7 @@
     min-height: 100vh;
     font-weight: 300;
     -webkit-font-smoothing: antialiased;
-    background-image: radial-gradient(rgba(255,255,255,0.01) 1px, transparent 1px), linear-gradient(180deg, rgba(255,255,255,0.01), rgba(0,0,0,0.02));
+    background-image: radial-gradient(ellipse at 50% 30%, rgba(120,80,30,0.08), transparent 70%), radial-gradient(rgba(201,169,110,0.015) 1px, transparent 1px);
     background-size: 10px 10px, 100% 100%;
   }
 
@@ -288,8 +288,7 @@
   <!-- Landing -->
   <div class="landing" id="landing">
     <div class="logo-section">
-      <h1>MIZU</h1>
-      <div class="subtitle">Omakase</div>
+      <img src="logo.png" alt="Mizu Omakase" style="width:320px;height:auto;margin-bottom:12px">
       <div class="tagline">An intimate dining experience — seasonal, small-batch, crafted</div>
       <div class="divider"></div>
       <svg class="wave" viewBox="0 0 120 20" xmlns="http://www.w3.org/2000/svg"><path d="M0 10 C 20 2, 40 18, 60 10 C 80 2,100 18,120 10" stroke="rgba(181,143,85,0.6)" stroke-width="0.9" fill="none" stroke-linecap="round"/></svg>
