--- a/index.html
+++ b/index.html
@@ -185,8 +185,12 @@
   .hold-notice .text { font-size: 0.78rem; color: var(--text-dim); line-height: 1.5; }
   .hold-notice .text strong { color: var(--text); font-weight: 400; }
 
-  .secure-badge { display: flex; align-items: center; justify-content: center; gap: 6px; margin-top: 16px; font-size: 0.7rem; color: var(--text-dim); letter-spacing: 0.05em; }
-  .secure-badge svg { width: 12px; height: 12px; }
+  .trust-badges { margin-top: 20px; padding: 16px; background: rgba(255,255,255,0.015); border: 1px solid var(--border); border-radius: 10px; }
+  .badge-row { display: flex; align-items: center; justify-content: center; gap: 10px; }
+  .badge-row svg { opacity: 0.85; }
+  .badge-divider { width: 60%; margin: 12px auto; height: 1px; background: var(--border); }
+  .badge-row.powered { font-size: 0.72rem; color: var(--text-dim); gap: 6px; }
+  .badge-row.powered strong { color: var(--text); font-weight: 400; }
 
   /* ── Success Page ── */
   .success-page { text-align: center; padding: 50px 0 30px; animation: fadeIn 500ms ease both; }
@@ -356,9 +360,25 @@
         </div>
       </div>
 
-      <div class="secure-badge">
-        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/></svg>
-        Secured by Stripe · 256-bit encryption
+      <!-- Trust badges -->
+      <div class="trust-badges">
+        <div class="badge-row">
+          <!-- Visa -->
+          <svg viewBox="0 0 48 32" width="44" height="28"><rect width="48" height="32" rx="4" fill="#1A1F71"/><text x="24" y="21" text-anchor="middle" fill="#FFFFFF" font-family="Arial,sans-serif" font-weight="bold" font-size="14" font-style="italic">VISA</text></svg>
+          <!-- Mastercard -->
+          <svg viewBox="0 0 48 32" width="44" height="28"><rect width="48" height="32" rx="4" fill="#1A1A2E"/><circle cx="19" cy="16" r="9" fill="#EB001B" opacity="0.9"/><circle cx="29" cy="16" r="9" fill="#F79E1B" opacity="0.9"/><path d="M24 9.5a9 9 0 010 13 9 9 0 010-13z" fill="#FF5F00"/></svg>
+          <!-- Amex -->
+          <svg viewBox="0 0 48 32" width="44" height="28"><rect width="48" height="32" rx="4" fill="#2E77BC"/><text x="24" y="19" text-anchor="middle" fill="#FFFFFF" font-family="Arial,sans-serif" font-weight="bold" font-size="7.5">AMEX</text></svg>
+        </div>
+        <div class="badge-divider"></div>
+        <div class="badge-row powered">
+          <svg viewBox="0 0 24 24" width="14" height="14" fill="none" stroke="#9a9a9a" stroke-width="2"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/></svg>
+          <span>Secured by <strong>Stripe</strong> · 256-bit SSL encryption</span>
+        </div>
+        <div class="badge-row powered" style="margin-top:2px">
+          <svg viewBox="0 0 24 24" width="14" height="14" fill="none" stroke="#9a9a9a" stroke-width="2"><path d="M9 12l2 2 4-4"/><circle cx="12" cy="12" r="10"/></svg>
+          <span>100% Secure · Your card details are never stored</span>
+        </div>
       </div>
     </div>
 
