--- a/index.html
+++ b/index.html
@@ -85,24 +85,28 @@
   .progress-bar .dot.done { background: var(--gold); }
   .progress-bar .dot.current { background: rgba(201,169,110,0.5); }
 
-  /* ── Date Picker ── */
-  .date-scroll { display: flex; gap: 10px; overflow-x: auto; padding: 8px 2px; -webkit-overflow-scrolling: touch; scrollbar-width: none; }
-  .date-scroll::-webkit-scrollbar { display: none; }
+  /* ── Calendar Grid ── */
+  .cal-header { display: flex; align-items: center; justify-content: space-between; margin-bottom: 14px; }
+  .cal-header .cal-month { font-family: 'Cormorant Garamond', serif; font-size: 1.15rem; color: var(--text); font-weight: 400; letter-spacing: 0.03em; }
+  .cal-header button { background: none; border: 1px solid var(--border); color: var(--text-dim); width: 36px; height: 36px; border-radius: 50%; cursor: pointer; font-size: 1rem; transition: border-color 180ms ease, color 180ms ease; display: flex; align-items: center; justify-content: center; }
+  .cal-header button:hover { border-color: rgba(181,143,85,0.6); color: var(--gold); }
+  .cal-header button:disabled { opacity: 0.2; cursor: not-allowed; }
 
-  .date-item {
-    flex-shrink: 0; width: 68px; padding: 12px 10px;
-    border: 1px solid var(--border); border-radius: 12px; text-align: center;
-    cursor: pointer; transition: transform 180ms ease, border-color 180ms ease, background 180ms ease;
-    background: linear-gradient(180deg, rgba(255,255,255,0.01), transparent);
-    box-shadow: 0 2px 8px rgba(0,0,0,0.4);
+  .cal-grid { display: grid; grid-template-columns: repeat(7, 1fr); gap: 4px; text-align: center; }
+  .cal-grid .cal-dow { font-size: 0.6rem; color: var(--text-dim); text-transform: uppercase; letter-spacing: 0.08em; padding: 6px 0; }
+
+  .cal-day {
+    aspect-ratio: 1; display: flex; align-items: center; justify-content: center;
+    border-radius: 10px; font-size: 0.9rem; cursor: pointer;
+    transition: background 160ms ease, border-color 160ms ease, transform 160ms ease;
+    border: 1px solid transparent; color: var(--text); position: relative;
   }
-  .date-item:hover { transform: translateY(-4px); border-color: rgba(181,143,85,0.9); }
-  .date-item.selected { border-color: rgba(181,143,85,0.95); background: linear-gradient(180deg, rgba(181,143,85,0.06), rgba(0,0,0,0.0)); }
-  .date-item.blocked { opacity: 0.32; cursor: not-allowed; }
-  .date-item .day-name { font-size: 0.65rem; color: var(--text-dim); text-transform: uppercase; letter-spacing: 0.05em; }
-  .date-item .day-num { font-size: 1.3rem; margin: 6px 0; color: var(--text); font-weight: 400; }
-  .date-item .month { font-size: 0.6rem; color: var(--text-dim); text-transform: uppercase; }
-  .date-item.selected .day-num { color: var(--gold); }
+  .cal-day:hover:not(.disabled):not(.past) { background: rgba(181,143,85,0.06); border-color: rgba(181,143,85,0.4); transform: scale(1.05); }
+  .cal-day.selected { background: rgba(181,143,85,0.1); border-color: rgba(181,143,85,0.9); color: var(--gold); font-weight: 500; }
+  .cal-day.past, .cal-day.disabled { color: rgba(255,255,255,0.15); cursor: not-allowed; }
+  .cal-day.blocked { color: rgba(255,255,255,0.15); cursor: not-allowed; text-decoration: line-through; }
+  .cal-day.empty { cursor: default; }
+  .cal-day.today { border-color: rgba(201,169,110,0.3); }
 
   /* ── Party Size ── */
   .pax-selector { display: flex; gap: 8px; flex-wrap: wrap; }
@@ -125,11 +129,18 @@
   }
   .session-card:hover:not(.full) { border-color: rgba(181,143,85,0.95); transform: translateY(-4px); box-shadow: 0 10px 30px rgba(0,0,0,0.6); }
   .session-card.selected { border-color: rgba(181,143,85,0.95); background: rgba(181,143,85,0.04); }
-  .session-card.full { opacity: 0.46; }
+  .session-card.full { opacity: 0.38; cursor: not-allowed; }
+  .session-card.seats-low { border-color: rgba(201,169,110,0.4); }
+  .session-card.seats-critical { border-color: rgba(200,80,60,0.5); }
   .session-info h3 { font-family: 'Cormorant Garamond', serif; font-size: 1.05rem; font-weight: 400; margin-bottom: 4px; }
   .session-info .time { font-size: 0.8rem; color: var(--text-dim); }
   .session-meta { text-align: right; }
   .session-meta .price { color: var(--gold); font-size: 0.9rem; }
+  .session-meta .seats-badge { font-size: 0.7rem; padding: 3px 8px; border-radius: 6px; display: inline-block; margin-top: 4px; }
+  .session-meta .seats-badge.green { color: var(--success); }
+  .session-meta .seats-badge.yellow { color: #C9A96E; background: rgba(201,169,110,0.08); }
+  .session-meta .seats-badge.red { color: #C8503C; background: rgba(200,80,60,0.08); }
+  .session-meta .seats-badge.full { color: var(--text-dim); }
   .session-meta .waitlist-tag { font-size: 0.68rem; color: var(--error); border: 1px solid var(--error); padding: 4px 8px; border-radius: 6px; }
 
   /* ── Course chips ── */
@@ -276,7 +287,12 @@
       <button class="back-btn" onclick="goLanding()">←</button>
       <span class="step-title">Select Date</span>
     </div>
-    <div class="date-scroll" id="dateScroll"></div>
+    <div class="cal-header">
+      <button id="calPrev" onclick="calNav(-1)">‹</button>
+      <span class="cal-month" id="calMonth"></span>
+      <button id="calNext" onclick="calNav(1)">›</button>
+    </div>
+    <div class="cal-grid" id="calGrid"></div>
     <button class="btn primary" id="step1Next" disabled onclick="goStep2()">Continue</button>
   </div>
 
@@ -467,28 +483,77 @@ function updateStep3Btn() {
 }
 
 // ── Date Picker ──
+// ── Calendar ──
+let calViewDate = null; // current month being viewed
+let calMinDate = null;
+let calMaxDate = null;
+
 function initDatePicker() {
-  const container = document.getElementById('dateScroll');
-  container.innerHTML = '';
   const today = new Date();
-  const days = ['Sun','Mon','Tue','Wed','Thu','Fri','Sat'];
-  const months = ['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'];
-  for (let i = 1; i <= 30; i++) {
-    const d = new Date(today); d.setDate(d.getDate() + i);
-    const dateStr = d.toISOString().split('T')[0];
-    const blocked = blockedDates.includes(dateStr);
-    const item = document.createElement('div');
-    item.className = 'date-item' + (blocked ? ' blocked' : '') + (selectedDate === dateStr ? ' selected' : '');
-    item.innerHTML = `<div class="day-name">${days[d.getDay()]}</div><div class="day-num">${d.getDate()}</div><div class="month">${months[d.getMonth()]}</div>`;
-    if (!blocked) {
-      item.onclick = () => {
-        document.querySelectorAll('.date-item').forEach(el => el.classList.remove('selected'));
-        item.classList.add('selected');
+  calMinDate = new Date(today); calMinDate.setDate(calMinDate.getDate() + 1); // tomorrow
+  calMaxDate = new Date(today.getFullYear(), today.getMonth() + 2, 0); // end of next month
+  if (!calViewDate) calViewDate = new Date(calMinDate.getFullYear(), calMinDate.getMonth(), 1);
+  renderCalendar();
+}
+
+function calNav(dir) {
+  calViewDate.setMonth(calViewDate.getMonth() + dir);
+  renderCalendar();
+}
+
+function renderCalendar() {
+  const grid = document.getElementById('calGrid');
+  const monthLabel = document.getElementById('calMonth');
+  const months = ['January','February','March','April','May','June','July','August','September','October','November','December'];
+  const dows = ['Mon','Tue','Wed','Thu','Fri','Sat','Sun'];
+  const today = new Date(); today.setHours(0,0,0,0);
+
+  const year = calViewDate.getFullYear(), month = calViewDate.getMonth();
+  monthLabel.textContent = `${months[month]} ${year}`;
+
+  // Nav button limits (max 2 months from now)
+  const minMonth = new Date(calMinDate.getFullYear(), calMinDate.getMonth(), 1);
+  const maxMonth = new Date(today.getFullYear(), today.getMonth() + 1, 1); // next month
+  document.getElementById('calPrev').disabled = (year === minMonth.getFullYear() && month === minMonth.getMonth());
+  document.getElementById('calNext').disabled = (year === maxMonth.getFullYear() && month === maxMonth.getMonth());
+
+  grid.innerHTML = '';
+  // Day-of-week headers
+  dows.forEach(d => { const el = document.createElement('div'); el.className = 'cal-dow'; el.textContent = d; grid.appendChild(el); });
+
+  const firstDay = new Date(year, month, 1);
+  let startDow = firstDay.getDay(); // 0=Sun
+  startDow = startDow === 0 ? 6 : startDow - 1; // convert to Mon=0
+
+  // Empty cells before 1st
+  for (let i = 0; i < startDow; i++) { const el = document.createElement('div'); el.className = 'cal-day empty'; grid.appendChild(el); }
+
+  const daysInMonth = new Date(year, month + 1, 0).getDate();
+  for (let d = 1; d <= daysInMonth; d++) {
+    const date = new Date(year, month, d);
+    const dateStr = `${year}-${String(month+1).padStart(2,'0')}-${String(d).padStart(2,'0')}`;
+    const el = document.createElement('div');
+    el.className = 'cal-day';
+    el.textContent = d;
+
+    const isPast = date <= today;
+    const isBlocked = blockedDates.includes(dateStr);
+    const isBeyond = date > calMaxDate;
+    const isToday = date.getTime() === today.getTime();
+
+    if (isToday) el.classList.add('today');
+    if (isPast || isBeyond) { el.classList.add('past'); }
+    else if (isBlocked) { el.classList.add('blocked'); }
+    else {
+      if (selectedDate === dateStr) el.classList.add('selected');
+      el.onclick = () => {
+        grid.querySelectorAll('.cal-day').forEach(x => x.classList.remove('selected'));
+        el.classList.add('selected');
         selectedDate = dateStr;
         document.getElementById('step1Next').disabled = false;
       };
     }
-    container.appendChild(item);
+    grid.appendChild(el);
   }
 }
 
@@ -535,19 +600,39 @@ async function loadAvailability() {
 
     availabilityData.sessions.forEach(s => {
       const isFull = s.remaining <= 0;
+      const rem = s.remaining;
+      let seatClass = '', seatBadge = '';
+      if (isFull) {
+        seatClass = ' full'; seatBadge = '<div class="waitlist-tag">Fully Booked</div>';
+      } else if (rem <= 5) {
+        seatClass = ' seats-critical'; seatBadge = `<div class="seats-badge red">${rem} seats left</div>`;
+      } else if (rem <= 10) {
+        seatClass = ' seats-low'; seatBadge = `<div class="seats-badge yellow">${rem} seats left</div>`;
+      }
+
       const card = document.createElement('div');
-      card.className = 'session-card' + (isFull ? ' full' : '');
+      card.className = 'session-card' + seatClass;
       card.innerHTML = `
         <div class="session-info"><h3>${s.name}</h3><div class="time">${formatTime(s.startTime)} — ${formatTime(s.endTime)}</div></div>
-        <div class="session-meta">${isFull ? '<div class="waitlist-tag">Fully Booked</div>' : ''}</div>
+        <div class="session-meta">${seatBadge}</div>
       `;
-      card.onclick = () => {
-        document.querySelectorAll('#sessionList .session-card').forEach(el => el.classList.remove('selected'));
-        card.classList.add('selected');
-        selectedSession = s; isWaitlist = isFull;
-        document.getElementById('step2Next').disabled = false;
-        document.getElementById('step2Next').textContent = isFull ? 'Join Waitlist' : 'Continue';
-      };
+      if (!isFull) {
+        card.onclick = () => {
+          document.querySelectorAll('#sessionList .session-card').forEach(el => el.classList.remove('selected'));
+          card.classList.add('selected');
+          selectedSession = s; isWaitlist = false;
+          document.getElementById('step2Next').disabled = false;
+          document.getElementById('step2Next').textContent = 'Continue';
+        };
+      } else {
+        card.onclick = () => {
+          document.querySelectorAll('#sessionList .session-card').forEach(el => el.classList.remove('selected'));
+          card.classList.add('selected');
+          selectedSession = s; isWaitlist = true;
+          document.getElementById('step2Next').disabled = false;
+          document.getElementById('step2Next').textContent = 'Join Waitlist';
+        };
+      }
       list.appendChild(card);
     });
   } catch (e) {
